--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "deploy": "vercel --prod"
+    "deploy": "vercel --prod",
+    "vercel": "vercel init"
   },
   "author": "",
   "license": "ISC",
